# Iyokan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FindTcMalloc.cmake  LICENSE  Makefile  README.md  error.hpp  iyokan-packet.cpp  iyokan.cpp  iyokan.hpp  iyokan_cufhe.cpp  iyokan_cufhe.hpp  iyokan_cufhe2.cpp  iyokan_cufhe2.hpp  iyokan_plain.cpp  iyokan_plain.hpp  iyokan_tfhepp.cpp  iyokan_tfhepp.hpp  kvsp-packet.cpp  kvsp-packet.hpp  main.cpp  main.hpp  mux-ram-8-16-16.min.json  packet.hpp  plain.hpp  serialize.hpp  test.rb  test0.cpp  tfhepp.hpp  tfhepp_wrapper.hpp  tfheutil.cpp  utility.hpp
src/: CMakeLists.txt  allocator.cpp  blueprint.cpp  blueprint.hpp  dataholder_nt.cpp  dataholder_nt.hpp  error.cpp  error.hpp  error_nt.cpp  error_nt.hpp  iyokan-packet.cpp  iyokan.cpp  iyokan.hpp  iyokan_cufhe.cpp  iyokan_cufhe.hpp  iyokan_nt.cpp  iyokan_nt.hpp  iyokan_nt_plain.cpp  iyokan_nt_plain.hpp  iyokan_nt_tfhepp.cpp  iyokan_nt_tfhepp.hpp  iyokan_plain.cpp  iyokan_plain.hpp  iyokan_tfhepp.cpp  iyokan_tfhepp.hpp  label.cpp  label.hpp  main.cpp  mux-ram-8-8-8.min.json  network_reader.cpp  packet.hpp  packet_nt.cpp  packet_nt.hpp  snapshot.cpp  test0.cpp  tfhepp_cufhe_wrapper.hpp  utility.hpp
test/: cahp-diamond-mux.toml  cahp-diamond.toml  cahp-emerald-mux.toml  cahp-emerald.toml  cahp-pearl-core.json  cahp-pearl-mux.toml  cahp-pearl.toml  cahp-ruby-core.json  cahp-ruby-mux-1KiB.toml  cahp-ruby-mux.toml  cahp-ruby.toml  diamond-core-wo-ram-rom.json  kvsp_plain_req_packet00.in  test-addr-4bit.toml  test-and-4_2bit.scala  test-and-4bit.scala  test-counter-4bit.toml  test-div-8bit.toml  test-mux-4bit.scala  test-mux-ram-addr9bit.toml  test-pass-4bit.toml  test-ram-8-16-16.toml  test-register-4bit.scala  test-rom-7-32.toml  test00-diamond.out  test00.elf  test01-packet.toml  test01-recur-fib.c  test01-recur-fib.elf  test03.in  test04.out  test05.in  test06.out  test07.out  test08.in  test09-ruby.out  test09.in  test10-pearl.out  test10.in  test12.out  (+2 more)
test/config-toml/: addr-4bit.toml  addr-register-4bit.toml  big-mult.toml  cahp-diamond-mux.toml  cahp-diamond.toml  cahp-emerald-mux.toml  cahp-emerald.toml  cahp-pearl-mux.toml  cahp-pearl.toml  cahp-ruby-iyokanl1.toml  cahp-ruby-mux-1KiB.toml  cahp-ruby-mux.toml  cahp-ruby.toml  const-4bit.toml  counter-4bit.toml  dff-reset.toml  div-8bit.toml  mux-ram-8-16-16.toml  pass-4bit.toml  pass-addr-pass-4bit.toml  ram-addr8bit.toml  register-init-4bit.toml  test-addr-4bit.toml  test-counter-4bit.toml  test-div-8bit.toml  test-mux-ram-addr8bit.toml  test-pass-4bit.toml  test-ram-addr9bit.toml  test-rom-4-8.toml
test/in/: test00.in  test06.in  test07.in  test11.in  test12.in  test14.in  test15.in  test16.in  test17.in  test18.in  test20.in  test21.in
test/iyokanl1-json/: and-4bit-iyokanl1.json  cahp-pearl-core.json  cahp-ruby-core-1KiB.json  div-8bit-iyokanl1.json  emerald-core-wo-ram-rom.json  mux-4bit-iyokanl1.json  test-addr-4bit.json  test-and-4_2bit.json  test-counter-4bit.json  test-pass-4bit.json  test-register-4bit.json
test/master-chisel/: And4_2bit.scala  BigMult.scala  Const4bit.scala  DFFReset.scala  Divider8bit.scala  Elaborate.scala  Pass4bit.scala  RegisterInit4bit.scala  RegisterInit4bit.v  build.sbt  build.sh  build_sdff.sh  test-addr-4bit.scala  test-counter-4bit.scala  test-div-8bit.scala  test-pass-4bit.scala
test/yosys-json/: addr-4_2bit-yosys.json  addr-4bit-yosys.json  and-4bit-yosys.json  cahp-diamond-core-yosys.json  cahp-pearl-core-yosys.json  cahp-ruby-core-1KiB-yosys.json  cahp-ruby-core-yosys.json  const-4bit-yosys.json  counter-4bit-yosys.json  dff-reset.json  div-8bit-yosys.json  mux-4bit-yosys.json  pass-4bit-yosys.json  register-4bit-yosys.json  register-init-4bit-yosys.json
